--- a/installations/templates/installations/error_analysis.html
+++ b/installations/templates/installations/error_analysis.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
+{% load order_extras %}
 
 {% block title %}تحليل أخطاء التعديلات{% endblock %}
 
