--- a/installations/templates/installations/manage_customer_debt.html
+++ b/installations/templates/installations/manage_customer_debt.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load order_extras %}
 
 {% block title %}إدارة مديونية العميل - {{ order.order_number }}{% endblock %}
 
