--- a/installations/templates/installations/add_payment.html
+++ b/installations/templates/installations/add_payment.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
+{% load order_extras %}
 
 {% block title %}إضافة دفعة - {{ installation.order.order_number }}{% endblock %}
 
