--- a/installations/templates/installations/add_receipt_memo.html
+++ b/installations/templates/installations/add_receipt_memo.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load order_extras %}
 
 {% block title %}إضافة مذكرة استلام - {{ installation.order.order_number }}{% endblock %}
 
