--- a/installations/templates/installations/modification_detail.html
+++ b/installations/templates/installations/modification_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
+{% load order_extras %}
 
 {% block title %}تفاصيل طلب التعديل - {{ modification_request.installation.order.order_number }}{% endblock %}
 
