--- a/installations/templates/installations/schedule_installation.html
+++ b/installations/templates/installations/schedule_installation.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load order_extras %}
 
 {% block title %}جدولة التركيب - {{ installation.order.order_number }}{% endblock %}
 
